tests/ui/span/E0536.rs
#[cfg(not())] //~ ERROR E0536
pub fn something() {}

pub fn main() {}

// ferrocene-annotations: fls_fymvsy6ig99a
// Attribute cfg
